# dependent_ci

./: .gitmodules  CMakeLists.txt  README.md
src/app/: CMakeLists.txt  hello_world.cpp
src/lib/: CMakeLists.txt  Hello.cpp
src/lib/local/: Hello.h
src/tests/: Hello_tests.cpp
